# pealton-design-system

./: .gitattributes  CLAUDE.md  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/quick/260718-fwv-add-an-inline-svg-icon-component-jinja-m/: 260718-fwv-PLAN.md  260718-fwv-SUMMARY.md
.planning/quick/260719-d9g-create-docs-table-contract-md-written-ta/: 260719-d9g-INPUTS.md  260719-d9g-PLAN.md  260719-d9g-SUMMARY.md
.planning/quick/260719-fp4-implement-plt-080-pds-table-core-tabulat/: 260719-fp4-PLAN.md  260719-fp4-SUMMARY.md
.planning/quick/260719-mi0-implement-plt-081-inline-edit-module-sta/: 260719-mi0-PLAN.md  260719-mi0-SUMMARY.md
.planning/quick/260720-e12-adopt-web-awesome-free-mit-vendored-into/: 260720-e12-PLAN.md  260720-e12-RESEARCH.md  260720-e12-SUMMARY.md
docs/: TABLE-CONTRACT.md  WEB-AWESOME.md  index.html  table.html  webawesome.html
pealton_design_system/: __init__.py
pealton_design_system.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pealton_design_system/static/: components.css  fonts.css  forms.css  icons.css  overlays.css  pds-field-editor.js  pds-table.js  pds.js  tabulator.css  tokens.css  webawesome.base.css  webawesome.bundle.js  webawesome.css
pealton_design_system/templates/: pds.html
tests/: test_field_editor.py  test_macros.py  test_table_module.py  test_webawesome.py
tests/js/: dom-stub.mjs  field-editor.harness.mjs
